kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: currencies-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: currencies.com
      http:
        paths:
          - path: /currencies-be
            backend:
              serviceName: currencies-rx-backend
              servicePort: 8080
          - path: /currencies-fe
            backend:
              serviceName: currencies-rx-frontend
              servicePort: 3000
